--- a/react/hello_word/package.json
+++ b/react/hello_word/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.5",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "@rneui/themed": "^4.0.0-rc.7",
     "i": "^0.3.7",
     "npm": "^9.1.2",
     "react": "18.1.0",
